[gd_scene load_steps=3 format=3 uid="uid://chxmw40vgwsmd"]

[ext_resource type="Script" path="res://menus/menu.gd" id="1_vt5xx"]
[ext_resource type="Theme" uid="uid://ckmqat7sg1jdb" path="res://themes/default_theme.tres" id="2_o028q"]

[node name="Menu" type="Node"]
script = ExtResource("1_vt5xx")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 480.0
color = Color(0.12549, 0.12549, 0.12549, 1)
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 640.0
offset_bottom = 480.0

[node name="TitleContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 80

[node name="TitleLabel" type="Label" parent="MarginContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_o028q")
theme_override_font_sizes/font_size = 32
text = "BREAK OUT CLONE"

[node name="MenuContainer" type="VBoxContainer" parent="."]
offset_left = 204.0
offset_top = 230.0
offset_right = 422.0
offset_bottom = 390.0
theme = ExtResource("2_o028q")

[node name="PlayButton" type="Button" parent="MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="ScoresButton" type="Button" parent="MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "High Scores"

[node name="OptionsButton" type="Button" parent="MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
